--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,7 @@ security:
             provider: app_user_provider
             custom_authenticator: App\Security\UserFormAuthenticator
             logout:
-                path: app_logout
+                path: security.logout
                 # where to redirect after logout
                 # target: app_any_route
 
